--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 }
 
 body {
-  background: #f4f4f8;
-  color: rgb(15, 13, 13);
+  background: #0f0f0f;
+  color: rgb(250, 245, 245);
 }
 
 /* HERO SECTION */
@@ -27,8 +27,8 @@ body {
 .profile-img {
   width: 150px;
   height: 150px;
-  border-radius: 50%;
-  border: 3px solid #ffca28;
+  border-radius: 60%;
+  border: 3px solid #e6b830;
   margin-bottom: 15px;
   box-shadow: 0 0 15px #000;
 }
@@ -49,7 +49,7 @@ body {
   padding: 10px 25px;
   background: #ffca28;
   color: black;
-  border-radius: 7px;
+  border-radius: 10px;
   text-decoration: none;
   margin-top: 15px;
   font-weight: bold;
@@ -92,35 +92,35 @@ h2 {
 
 /* SKILL BARS */
 .skill {
-  margin-bottom: 18px;
+  margin-bottom: 20px;
 }
 .skill span {
   font-weight: bold;
 }
 .bar {
-  height: 8px;
+  height: 10px;
   width: 100%;
-  background: #ece9e9;
+  background: #e2dede;
   border-radius: 5px;
   margin-top: 5px;
 }
 .bar div {
   height: 100%;
-  background: #0c0c0b;
+  background: #bb370f;
   border-radius: 5px;
 }
 
 /* PROJECT CARDS */
 .project-card {
   padding: 15px;
-  background: #f2f2f5;
+  background: #101011;
   border-radius: 8px;
   margin: 12px 0;
   transition: 0.3s;
 }
 .project-card:hover {
   transform: translateY(-5px) scale(1.02);
-  background: #24242a;
+  background: #e2e2eb;
 }
 
 /* FOOTER */
